--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,10 @@
   color: #61dafb;
 }
 
+.form {
+  padding: 0 30px 0 30px
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
